Fix #334: Replace guava ImmutableList by Java API